# deep-learning-from-scratch

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
data/: README.md
notebooks/: README.md  hello.ipynb  package_test.ipynb
